--- a/Tedometer/MainView.xib
+++ b/Tedometer/MainView.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="61"/>
+			<integer value="34"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -211,11 +211,11 @@
 					<object class="IBUILabel" id="832694444">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{31, 299}, {95, 21}}</string>
+						<string key="NSFrame">{{31, 319}, {95, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAgMAA</bytes>
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC41OTUxNjA1NjI2IDAuNzcgMC4xOTI1IDAAA</bytes>
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -226,7 +226,10 @@
 							<double key="NSSize">17</double>
 							<int key="NSfFlags">16</int>
 						</object>
-						<reference key="IBUITextColor" ref="578579187"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC41OTUxNjA1NjI2IDAuNzcgMC4xOTI1AA</bytes>
+						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
@@ -234,7 +237,7 @@
 					<object class="IBUILabel" id="141671576">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{31, 339}, {127, 21}}</string>
+						<string key="NSFrame">{{31, 299}, {127, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -256,7 +259,7 @@
 					<object class="IBUILabel" id="777837999">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{31, 318}, {127, 21}}</string>
+						<string key="NSFrame">{{31, 339}, {127, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -297,7 +300,7 @@
 					<object class="IBUILabel" id="893225097">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{174, 339}, {122, 21}}</string>
+						<string key="NSFrame">{{174, 299}, {122, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -372,7 +375,12 @@
 							</object>
 							<object class="IBUIBarButtonItem" id="690789168">
 								<string key="IBUITitle">lbs</string>
-								<float key="IBUIWidth">45</float>
+								<float key="IBUIWidth">40</float>
+								<reference key="IBUIToolbar" ref="987535781"/>
+							</object>
+							<object class="IBUIBarButtonItem" id="477325253">
+								<string key="IBUITitle">V</string>
+								<float key="IBUIWidth">40</float>
 								<reference key="IBUIToolbar" ref="987535781"/>
 							</object>
 							<object class="IBUIBarButtonItem" id="134363610">
@@ -384,7 +392,7 @@
 					<object class="IBUILabel" id="479298590">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{174, 319}, {122, 21}}</string>
+						<string key="NSFrame">{{174, 339}, {122, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -404,7 +412,7 @@
 					<object class="IBUILabel" id="1020466564">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{174, 299}, {122, 21}}</string>
+						<string key="NSFrame">{{174, 319}, {122, 21}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -415,7 +423,10 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIText">...</string>
 						<reference key="IBUIFont" ref="1035774887"/>
-						<reference key="IBUITextColor" ref="578579187"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC41OTUxNjA1NjI2IDAuNzcgMC4xOTI1AA</bytes>
+						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
@@ -447,7 +458,7 @@
 					<object class="IBUIImageView" id="635869746">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{9, 319}, {20, 20}}</string>
+						<string key="NSFrame">{{9, 339}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -455,13 +466,13 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">peak_arrow.png</string>
+							<string key="NSResourceName">arrow_peak.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="904877150">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{9, 340}, {20, 20}}</string>
+						<string key="NSFrame">{{9, 299}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -469,7 +480,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">low_arrow.png</string>
+							<string key="NSResourceName">arrow_low.png</string>
 						</object>
 					</object>
 					<object class="IBUILabel" id="687799191">
@@ -510,6 +521,20 @@
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">2</int>
+					</object>
+					<object class="IBUIImageView" id="413782349">
+						<reference key="NSNextResponder" ref="883825266"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{9, 319}, {20, 20}}</string>
+						<reference key="NSSuperview" ref="883825266"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">arrow_avg.png</string>
+						</object>
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 460}</string>
@@ -710,6 +735,22 @@
 					</object>
 					<int key="connectionID">179</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">activateVoltageMeter</string>
+						<reference key="source" ref="477325253"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">182</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">avgLabelPointerImage</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="413782349"/>
+					</object>
+					<int key="connectionID">183</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -737,20 +778,21 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="987535781"/>
-							<reference ref="141671576"/>
 							<reference ref="517476041"/>
-							<reference ref="479298590"/>
-							<reference ref="1020466564"/>
-							<reference ref="893225097"/>
 							<reference ref="614999557"/>
-							<reference ref="904877150"/>
-							<reference ref="635869746"/>
-							<reference ref="832694444"/>
 							<reference ref="125323634"/>
-							<reference ref="777837999"/>
 							<reference ref="453399870"/>
 							<reference ref="687799191"/>
 							<reference ref="863106071"/>
+							<reference ref="141671576"/>
+							<reference ref="832694444"/>
+							<reference ref="777837999"/>
+							<reference ref="904877150"/>
+							<reference ref="635869746"/>
+							<reference ref="1020466564"/>
+							<reference ref="479298590"/>
+							<reference ref="893225097"/>
+							<reference ref="413782349"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -821,6 +863,7 @@
 							<reference ref="690789168"/>
 							<reference ref="848067404"/>
 							<reference ref="698443878"/>
+							<reference ref="477325253"/>
 						</object>
 						<reference key="parent" ref="883825266"/>
 					</object>
@@ -929,6 +972,16 @@
 						<reference key="parent" ref="883825266"/>
 						<string key="objectName">ProjValue</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">180</int>
+						<reference key="object" ref="413782349"/>
+						<reference key="parent" ref="883825266"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">181</int>
+						<reference key="object" ref="477325253"/>
+						<reference key="parent" ref="987535781"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -962,6 +1015,8 @@
 					<string>173.IBPluginDependency</string>
 					<string>174.IBPluginDependency</string>
 					<string>175.IBPluginDependency</string>
+					<string>180.IBPluginDependency</string>
+					<string>181.IBPluginDependency</string>
 					<string>34.CustomClassName</string>
 					<string>34.IBEditorWindowLastContentRect</string>
 					<string>34.IBPluginDependency</string>
@@ -999,8 +1054,10 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>MainView</string>
-					<string>{{601, 536}, {320, 480}}</string>
+					<string>{{591, 369}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1024,7 +1081,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">179</int>
+			<int key="maxID">183</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1047,6 +1104,7 @@
 							<string>activateCarbonMeter</string>
 							<string>activateCostMeter</string>
 							<string>activatePowerMeter</string>
+							<string>activateVoltageMeter</string>
 							<string>nextMeter</string>
 							<string>refreshData</string>
 							<string>showInfo</string>
@@ -1054,6 +1112,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1069,6 +1128,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>activityIndicator</string>
 							<string>avgLabel</string>
+							<string>avgLabelPointerImage</string>
 							<string>avgValue</string>
 							<string>lowLabel</string>
 							<string>lowValue</string>
@@ -1088,6 +1148,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIActivityIndicatorView</string>
 							<string>UILabel</string>
+							<string>UIImageView</string>
 							<string>UILabel</string>
 							<string>UILabel</string>
 							<string>UILabel</string>
